--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-GITHUB_TOKEN=your_token_here
-AWS_ACCESS_KEY_ID=your_key_here
-AWS_SECRET_ACCESS_KEY=your_secret_here
+# GitHub credentials
+GITHUB_TOKEN=your_github_token_here
+
+# AWS credentials
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
